tests/fixtures/valid/operators.wgsl
// Various operators
fn testOperators() {
    var a: f32 = 1.0 + 2.0;
    var b: f32 = 3.0 - 1.0;
    var c: f32 = 2.0 * 3.0;
    var d: f32 = 6.0 / 2.0;
    var e: f32 = 7.0 % 3.0;
    
    var cmp1: bool = a == b;
    var cmp2: bool = a != b;
    var cmp3: bool = a < b;
    var cmp4: bool = a > b;
    var cmp5: bool = a <= b;
    var cmp6: bool = a >= b;
    
    var logic1: bool = true && false;
    var logic2: bool = true || false;
    var logic3: bool = !true;
}
