tests/fixtures/invalid/invalid-operator.wgsl
// Invalid operator
fn test() {
    var x: f32 = 1.0 ++ 2.0;
}
